[gd_scene load_steps=6 format=3 uid="uid://c35qwdysfocgr"]

[ext_resource type="Texture2D" uid="uid://4iln7h6awmk5" path="res://Scenes/Scene 6/6 Оригинал.png" id="1_7wn0v"]
[ext_resource type="Script" uid="uid://gtsci7p5tkgl" path="res://Scenes/Scene 6/scene_6.gd" id="2_enp3u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shhbt"]
size = Vector2(146.5, 314)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20po5"]
size = Vector2(1145, 10.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wn0v"]
size = Vector2(50, 392)

[node name="Scene 6" type="Sprite2D"]
position = Vector2(48, 48)
texture = ExtResource("1_7wn0v")
centered = false
script = ExtResource("2_enp3u")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1026.25, 352)
shape = SubResource("RectangleShape2D_shhbt")

[node name="Timer время до появления сообщения при входе в сцену" type="Timer" parent="."]

[node name="Timer длительность отображения сообщения при входе в сцену" type="Timer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1246.5, 115)
shape = SubResource("RectangleShape2D_20po5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(626, 479)
shape = SubResource("RectangleShape2D_7wn0v")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer время до появления сообщения при входе в сцену" to="." method="_on_timer_время_до_появления_сообщения_при_входе_в_сцену_timeout"]
[connection signal="timeout" from="Timer длительность отображения сообщения при входе в сцену" to="." method="_on_timer_длительность_отображения_сообщения_при_входе_в_сцену_timeout"]
